# txtToWeb

./: .gitignore  CONTRIBUTING.md  README.md  format_project.sh  pyproject.toml  run_pylint.sh  sampleMD.md  test_txtToWeb.py  txtToWeb.py
.github/workflows/: ci.yml
examples/: test.txt
examples/txtToWeb/: test.html
include/: config_parser.py  file_parser.py  html_generator.py  markdown_converter.py
tests/: test_config_parser.py  test_markdown_converter.py
