[project]
name = "txtToWeb"
version = "1.0.0"
authors = [
  { name="Rachit Chawla", email="rchawla11@myseneca.ca" },
]
description = "txt/md to html converter"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Rachit1313/txtToWeb"
Issues = "https://github.com/Rachit1313/issues"